k8s/monitoring/tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: grafana-gateway
      sectionName: https
      namespace: monitoring
  hostnames:
    - "grafana.bramble"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 80
